--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,8 +7,103 @@
     <title>Document</title>
   </head>
   <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <!-- шапка -->
+    <header>
+      <!-- навагация -->
+      <nav>
+      <!-- логотип / главная страница-->
+      <a href="#"><span>Web</span><span>Studio</span></a>
+      <!-- навагация по сайту -->
+      <ul>
+        <li><a href="#service">Студия</a></li>
+        <li><a href="#portfolio">Портфолио</a></li>
+        <li><a href="#contacts">Контакты</a></li>
+      </ul>
+    </nav>
+      <!-- почта и телефон -->
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
+    </header>
+    <main>
+      <section id="service">
+        <h1>Эффективные решения для вашего бизнеса</h1>
+        <p>Заказать услугу</p>
+      </section>
+
+      <!-- раздел достоинств -->
+      <section id="portfolio">
+        <!-- невидимый заголовок для читалки -->
+        <h2>Зачем выбирать нас</h2>
+
+        <!-- список достоинств -->
+        <ul>
+          <h3>Внимание к деталям</h3>
+          <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+        </ul>
+        <ul>
+          <h3>Пунктуальность</h3>
+          <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+        </ul>
+        <ul>
+          <h3>Планирование</h3>
+          <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+        </ul>
+        <ul>
+          <h3>Современные технологии</h3>
+          <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+        </ul>
+      </section>
+      <!-- раздел чем мы занимаемся -->
+      <section>
+        <!-- заголовок -->
+        <h2>Чем мы занимаемся</h2>
+        <!-- фото -->
+        <ul>
+          <li><img src="./images/box-1.jpg" alt="Фото нашей работы 1" width="370" /></li>
+          <li><img src="./images/box-2.jpg" alt="Фото нашей работы 2" width="370" /></li>
+          <li><img src="./images/box-3.jpg" alt="Фото нашей работы 3" width="370" /></li>
+        </ul>
+      </section>
+
+      <!-- раздел кто мы -->
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li><img src="./images/img-1.jpg" alt="Наш сотрудник 1" width="270" />
+          <h3>Игорь Демьяненко</h3>
+          <p>Product Designer</p>
+          </li>
+          <li><img src="./images/img-2.jpg" alt="Наш сотрудник 2" width="270" />
+          <h3>Ольга Репина</h3>
+          <p>Frontend Developer</p>
+          </li>
+          <li><img src="./images/img-3.jpg" alt="Наш сотрудник 3" width="270" />
+          <h3>Николай Тарасов</h3>
+          <p>Marketing</p>
+          </li>
+          <li><img src="./images/img-4.jpg" alt="Наш сотрудник 4" width="270" />
+          <h3>Михаил Ермаков</h3>
+          <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+
+    <!-- футер / контакты -->
+    <footer>
+      <!-- раздел контакты -->
+      <section id="contacts">
+        <!-- лого без ссылки -->
+        <span>Web</span><span>Studio</span>
+        <!-- контакты -->
+        <address>
+          г. Киев, пр-т Леси Украинки, 26<br>
+          <a href="mailto:info@example.com">info@example.com</a><br>
+          <a href="tel:+380991111111">+38 099 111 11 11</a>
+        </address>
+      </section>
+    </footer>
   </body>
 </html>
