--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <header>
       <!-- навагация -->
       <nav>
-      <!-- логотип / главная страница-->
-      <a href="#"><span>Web</span><span>Studio</span></a>
-      <!-- навагация по сайту -->
-      <ul>
-        <li><a href="#service">Студия</a></li>
-        <li><a href="#portfolio">Портфолио</a></li>
-        <li><a href="#contacts">Контакты</a></li>
-      </ul>
-    </nav>
+        <!-- логотип / главная страница-->
+        <a href="#"><span>Web</span><span>Studio</span></a>
+        <!-- навагация по сайту -->
+        <ul>
+          <li><a href="#service">Студия</a></li>
+          <li><a href="#portfolio">Портфолио</a></li>
+          <li><a href="#contacts">Контакты</a></li>
+        </ul>
+      </nav>
       <!-- почта и телефон -->
       <ul>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
@@ -71,21 +71,25 @@
       <section>
         <h2>Наша команда</h2>
         <ul>
-          <li><img src="./images/img-1.jpg" alt="Наш сотрудник 1" width="270" />
-          <h3>Игорь Демьяненко</h3>
-          <p>Product Designer</p>
+          <li>
+            <img src="./images/img-1.jpg" alt="Наш сотрудник 1" width="270" />
+            <h3>Игорь Демьяненко</h3>
+            <p>Product Designer</p>
           </li>
-          <li><img src="./images/img-2.jpg" alt="Наш сотрудник 2" width="270" />
-          <h3>Ольга Репина</h3>
-          <p>Frontend Developer</p>
+          <li>
+            <img src="./images/img-2.jpg" alt="Наш сотрудник 2" width="270" />
+            <h3>Ольга Репина</h3>
+            <p>Frontend Developer</p>
           </li>
-          <li><img src="./images/img-3.jpg" alt="Наш сотрудник 3" width="270" />
-          <h3>Николай Тарасов</h3>
-          <p>Marketing</p>
+          <li>
+            <img src="./images/img-3.jpg" alt="Наш сотрудник 3" width="270" />
+            <h3>Николай Тарасов</h3>
+            <p>Marketing</p>
           </li>
-          <li><img src="./images/img-4.jpg" alt="Наш сотрудник 4" width="270" />
-          <h3>Михаил Ермаков</h3>
-          <p>UI Designer</p>
+          <li>
+            <img src="./images/img-4.jpg" alt="Наш сотрудник 4" width="270" />
+            <h3>Михаил Ермаков</h3>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
@@ -99,8 +103,8 @@
         <span>Web</span><span>Studio</span>
         <!-- контакты -->
         <address>
-          г. Киев, пр-т Леси Украинки, 26<br>
-          <a href="mailto:info@example.com">info@example.com</a><br>
+          г. Киев, пр-т Леси Украинки, 26<br />
+          <a href="mailto:info@example.com">info@example.com</a><br />
           <a href="tel:+380991111111">+38 099 111 11 11</a>
         </address>
       </section>
