--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <!-- шапка -->
     <header>
       <!-- навагация -->
-      <nav>
+      <nav id="head">
         <!-- логотип / главная страница-->
-        <a href="#"><span>Web</span><span>Studio</span></a>
+        <a href="#head"
+          ><h3><span>Web</span><span>Studio</span></h3></a
+        >
         <!-- навагация по сайту -->
         <ul>
           <li><a href="#service">Студия</a></li>
@@ -29,7 +31,7 @@
     <main>
       <section id="service">
         <h1>Эффективные решения для вашего бизнеса</h1>
-        <p>Заказать услугу</p>
+        <button>Заказать услугу</button>
       </section>
 
       <!-- раздел достоинств -->
@@ -39,20 +41,26 @@
 
         <!-- список достоинств -->
         <ul>
-          <h3>Внимание к деталям</h3>
-          <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-        </ul>
-        <ul>
-          <h3>Пунктуальность</h3>
-          <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-        </ul>
-        <ul>
-          <h3>Планирование</h3>
-          <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-        </ul>
-        <ul>
-          <h3>Современные технологии</h3>
-          <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+          <li>
+            <h3>Внимание к деталям</h3>
+            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+          </li>
+          <li>
+            <h3>Пунктуальность</h3>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+            </p>
+          </li>
+          <li>
+            <h3>Планирование</h3>
+            <p>
+              Равным образом консультация с широким активом в значительной степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <h3>Современные технологии</h3>
+            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+          </li>
         </ul>
       </section>
       <!-- раздел чем мы занимаемся -->
@@ -73,23 +81,23 @@
         <ul>
           <li>
             <img src="./images/img-1.jpg" alt="Наш сотрудник 1" width="270" />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <p>Игорь Демьяненко</p>
+            <span>Product Designer</span>
           </li>
           <li>
             <img src="./images/img-2.jpg" alt="Наш сотрудник 2" width="270" />
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <p>Ольга Репина</p>
+            <span>Frontend Developer</span>
           </li>
           <li>
             <img src="./images/img-3.jpg" alt="Наш сотрудник 3" width="270" />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <p>Николай Тарасов</p>
+            <span>Marketing</span>
           </li>
           <li>
             <img src="./images/img-4.jpg" alt="Наш сотрудник 4" width="270" />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <p>Михаил Ермаков</p>
+            <span>UI Designer</span>
           </li>
         </ul>
       </section>
@@ -99,8 +107,10 @@
     <footer>
       <!-- раздел контакты -->
       <section id="contacts">
-        <!-- лого без ссылки -->
-        <span>Web</span><span>Studio</span>
+        <!-- лого -->
+        <a href="#head"
+          ><h3><span>Web</span><span>Studio</span></h3></a
+        >
         <!-- контакты -->
         <address>
           г. Киев, пр-т Леси Украинки, 26<br />
