--- a/index.html
+++ b/index.html
@@ -10,16 +10,14 @@
     <!-- шапка -->
     <header>
       <!-- навагация -->
-      <nav id="head">
+      <nav>
         <!-- логотип / главная страница-->
-        <a href="#head"
-          ><h3><span>Web</span><span>Studio</span></h3></a
-        >
+        <a href="#">Web<span>Studio</span></h3></a>
         <!-- навагация по сайту -->
         <ul>
-          <li><a href="#service">Студия</a></li>
-          <li><a href="#portfolio">Портфолио</a></li>
-          <li><a href="#contacts">Контакты</a></li>
+          <li><a href="#">Студия</a></li>
+          <li><a href="#">Портфолио</a></li>
+          <li><a href="#">Контакты</a></li>
         </ul>
       </nav>
       <!-- почта и телефон -->
@@ -29,13 +27,13 @@
       </ul>
     </header>
     <main>
-      <section id="service">
+      <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
         <button>Заказать услугу</button>
       </section>
 
       <!-- раздел достоинств -->
-      <section id="portfolio">
+      <section>
         <!-- невидимый заголовок для читалки -->
         <h2>Зачем выбирать нас</h2>
 
@@ -69,9 +67,9 @@
         <h2>Чем мы занимаемся</h2>
         <!-- фото -->
         <ul>
-          <li><img src="./images/box-1.jpg" alt="Фото нашей работы 1" width="370" /></li>
-          <li><img src="./images/box-2.jpg" alt="Фото нашей работы 2" width="370" /></li>
-          <li><img src="./images/box-3.jpg" alt="Фото нашей работы 3" width="370" /></li>
+          <li><img src="./images/box-1.jpg" alt="Опытные специалисты" width="370" /></li>
+          <li><img src="./images/box-2.jpg" alt="Современный дизайн" width="370" /></li>
+          <li><img src="./images/box-3.jpg" alt="Работа художников" width="370" /></li>
         </ul>
       </section>
 
@@ -81,23 +79,23 @@
         <ul>
           <li>
             <img src="./images/img-1.jpg" alt="Наш сотрудник 1" width="270" />
-            <p>Игорь Демьяненко</p>
-            <span>Product Designer</span>
+            <h3>Игорь Демьяненко</h3>
+            <p>Product Designer</p>
           </li>
           <li>
             <img src="./images/img-2.jpg" alt="Наш сотрудник 2" width="270" />
-            <p>Ольга Репина</p>
-            <span>Frontend Developer</span>
+            <h3>Ольга Репина</h3>
+            <p>Frontend Developer</p>
           </li>
           <li>
             <img src="./images/img-3.jpg" alt="Наш сотрудник 3" width="270" />
-            <p>Николай Тарасов</p>
-            <span>Marketing</span>
+            <h3>Николай Тарасов</h3>
+            <p>Marketing</p>
           </li>
           <li>
             <img src="./images/img-4.jpg" alt="Наш сотрудник 4" width="270" />
-            <p>Михаил Ермаков</p>
-            <span>UI Designer</span>
+            <h3>Михаил Ермаков</h3>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
@@ -106,18 +104,19 @@
     <!-- футер / контакты -->
     <footer>
       <!-- раздел контакты -->
-      <section id="contacts">
-        <!-- лого -->
-        <a href="#head"
-          ><h3><span>Web</span><span>Studio</span></h3></a
-        >
-        <!-- контакты -->
-        <address>
-          г. Киев, пр-т Леси Украинки, 26<br />
-          <a href="mailto:info@example.com">info@example.com</a><br />
-          <a href="tel:+380991111111">+38 099 111 11 11</a>
-        </address>
-      </section>
+
+      <!-- лого -->
+      <a href="#">Web<span>Studio</span></h3></a>
+      <!-- контакты -->
+      <address>
+        <ul>
+          <li>
+            <a href="https://goo.gl/maps/tme8VJcGeJXMZeD66">г. Киев, пр-т Леси Украинки, 26</a>
+          </li>
+          <li><a href="mailto:info@example.com">info@example.com</a></li>
+          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+        </ul>
+      </address>
     </footer>
   </body>
 </html>
