--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <!-- навагация -->
       <nav>
         <!-- логотип / главная страница-->
-        <a href="#">Web<span>Studio</span></h3></a>
+        <a href="#">Web<span>Studio</span></a>
         <!-- навагация по сайту -->
         <ul>
           <li><a href="#">Студия</a></li>
@@ -106,7 +106,7 @@
       <!-- раздел контакты -->
 
       <!-- лого -->
-      <a href="#">Web<span>Studio</span></h3></a>
+      <a href="#">Web<span>Studio</span></a>
       <!-- контакты -->
       <address>
         <ul>
